# dance-scoring-system

./: .gitignore  CLAUDE.md  GUI界面及代码改动需求.txt  README.md  analysis.html  check_env.py  config.py  deepseek_markdown_20260526_2912f4.md  pyproject.toml  requirements.txt  requirements_new.txt  score_dance.py  split_8beats.py  test.py  启动GUI.bat
.claude/: settings.local.json
LLM/: README.md  __init__.py  model_manager.py  my_qwen.py  prompts.py  provider.py
LLM/tools/: chat_3b.py  llm_bridge.py  start_all.sh
dance-scoring-system-main/dance-scoring-system-main/: CLAUDE.md  GUI需求规格说明书.md  check_env.py  gui_components.py  gui_main.py  gui_worker.py  requirements.txt  score_dance.py  split_8beats.py  启动GUI.bat
docs/: gui-requirements.md  设计文档.doc
docs/specs/: 2026-05-26-project-restructure-design.md  2026-05-26-rename-version-v1.0.md  2026-06-03-execution-manual.md  2026-06-03-openvino-integration-design.md  2026-06-06-gui-hud-redesign.md  2026-06-18-visibility-filtered-scoring-design.md
ov_env/: pyvenv.cfg
ov_env/Scripts/: activate  activate.bat
scripts/: benchmark.py  convert_model.py  run_live.py  score.py  score_bridge.py  setup_npu.sh  split.py
src/dance_scoring/: __init__.py
src/dance_scoring/camera/: base.py  stream.py  usb.py
src/dance_scoring/core/: alignment.py  config.py  correction.py  correction_provider.py  engine.py  extractor.py  frame.py  inference.py  scorer.py  segments.py
src/dance_scoring/gui/: app.py  components.py  hub.py  live_view.py  logger.py  panels.py  theme.py  worker.py
src/dance_scoring/hardware/: display.py
(+19 files in other folders)
